
[tool.poetry]
name = "survival"
version = "0.1.0"
description = ""
authors = ["Martin Højland <molheh@nuuday.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
seaborn = "^0.11.1"
hyperopt = "^0.2.5"
captum = "^0.3.1"
mlflow = "^1.13.1"
sqlalchemy = "^1.3.23"
jmespath = "^0.10.0"
scikit-learn = "^0.24.1"
matplotlib = "^3.3.4"
pyyaml = "^5.4.1"
tqdm = "^4.52.0"
pandas = "^1.1.4"
numpy = "^1.19.4"
pydantic = "^1.7.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
lifelines = "^0.25.9"
xgboost = "^1.3.3"
python-dotenv = "^0.15.0"
jupyterlab = "^2.2.9"
ipykernel = "^5.3.4"
pylint = "^2.6.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report=xml:cov.xml --black"